--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@ button:hover { background:#45a049; }
 <div id="progressContainer">
   <div id="progressBar"></div>
 </div>
+  auth.signInAnonymously().then(userCredential => {
+  console.log("User signed in:", userCredential.user.uid);
+  alert("Firebase connected! UID: " + userCredential.user.uid);
+}).catch(err => {
+  console.error("Auth error:", err);
+  alert("Firebase Auth Error: " + err.message);
+});
+
 
 <button id="watchAdButton">Watch Ad & Earn Coins</button>
 <button id="withdrawButton">Request Withdrawal</button>
@@ -100,15 +108,18 @@ function loadUserData(){
 
 // 🔹 Watch Ad
 function watchAd(){
+  console.log("Watch Ad clicked");
+  if(!uid){ alert("User not logged in"); return; }
+  const earned = Math.floor(Math.random()*51)+50; // 50-100 coins
   db.ref("users/"+uid).once("value").then(snapshot=>{
-    const data = snapshot.val();
-    if(data.dailyAdsWatched >= dailyAdLimit){ alert("Daily ad limit reached!"); return; }
-    const earned = Math.floor(Math.random()*(adRewardMax-adRewardMin+1))+adRewardMin;
-    const newCoins = data.coins + earned;
-    db.ref("users/"+uid).update({coins: newCoins, dailyAdsWatched: data.dailyAdsWatched+1});
+    let data = snapshot.val();
+    let newCoins = (data?.coins||0) + earned;
+    db.ref("users/"+uid).update({coins: newCoins, dailyAdsWatched: (data?.dailyAdsWatched||0)+1});
+    console.log("Coins updated:", newCoins);
     alert(`You earned ${earned} coins!`);
   });
 }
+
 
 // 🔹 Withdraw
 function requestWithdrawal(){
